Добавляет преимущества и секции выше

--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,64 @@
       </ul>
     </nav>
   </header>
+  <main class="main-container">
+    <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1>
+  </main>
+  <section class="welcome">
+    <img src="..//source/img/text-index.svg" width="282" height="214" alt="Добро пожаловать в Седону">
+  </section>
+  <section class="about-sedona">
+    <h2 class="about-sedona__title">СЕДОНА — небольшой городок в АРИЗОНЕ, зАСЛУЖИвающий большего!</h2>
+    <p class="about-sedona__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+  </section>
+  <section class="advantages">
+    <h2 class="visually hidden"> Преимущества Седоны </h2>
+    <ol class="advantages__list">
 
+    <li class="advantages__item advantages__item--blue-theme">
+        <h3 class="advantages__title advantages__title--white-theme">Настоящий городок</h3>
+        <p class="advantages__description advantages__description--white-theme"> -№1-</p>
+        <p class="advantages__description advantages__description--white-theme"> Седона - не аттракцион для туристов, там течет своя жизнь </p>
+      <img  src="..//source/img/photo-city@1x1.jpg" width="320" height="260" alt="Улицы Седоны">
+    </li>
+    <li class="advantages__item advantages__item--icon">
+      <h4 class="advantages__title advantages__title--icon">Жилье</h4>
+      <p class="advantages__description advantages__description--icon">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+    </li>
+    <li class="advantages__item advantages__item--icon">
+      <h4 class="advantages__title advantages__title--icon">Еда</h4>
+      <p class="advantages__description advantages__description--icon">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+      </p>
+    </li>
+    <li class="advantages__item advantages__item--icon">
+      <h4 class="advantages__title advantages__title--icon">Сувениры</h4>
+      <p class="advantages__description advantages__description--icon">Не только китайского, но и настоящего местного производства!</p>
+    </li>
+    <li class="advantages__item advantages__item--blue-theme">
+      <img src="..//source/img/photo-bridge@1x1.jpg" width="320" height="260" alt="Мост Дьявола">
+              <h3 class="advantages__title advantages__title--white-theme"> Там есть мост дьявола</h3>
+        <p class="advantages__description advantages__description--white-theme"> -№2-</p>
+        <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти! Если вы осмелитесь, разумеется </p>
+      </div>
+    </li>
+    <li class="advantages__item">
+      <h3 class="advantages__title">Небольшая площадь</h3>
+      <p class="advantages__description">-№3-</p>
+      <p class="advantages__description"> Все достопримечательности находятся очень близко</p>
+    </li>
+    <li class="advantages__item">
+
+      <h3 class="advantages__title">Красивая дорога</h3>
+      <p class="advantages__description">-№4-</p>
+      <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+    </li>
+    <li class="advantages__item">
+      <h3 class="advantages__title">Мало туристов</h3>
+      <p class="advantages__description"> -№5-</p>
+      <p class="advantages__description"> Большинство едет в Гранд Каньон и толпится там</p>
+    </li>
+    </ol>
+  </section>
 
 </body>
 
