--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__logo">
-      <img src="../source/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
+      <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
@@ -35,11 +35,12 @@
     <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1>
   </main>
   <section class="welcome">
-    <img src="..//source/img/text-index.svg" width="282" height="214" alt="Добро пожаловать в Седону">
+    <h2 class="visually hidden">Добро пожаловать в Седону</h2>
+    <img src="/img/text-index.svg" width="282" height="214" alt="Добро пожаловать в Седону">
   </section>
   <section class="about-sedona">
-    <h2 class="about-sedona__title">СЕДОНА — небольшой городок в АРИЗОНЕ, зАСЛУЖИвающий большего!</h2>
-    <p class="about-sedona__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+    <h2 class="about-sedona__title">СЕДОНА — небольшой городок в Аризорне, заслуживающий большего!</h2>
+    <p class="about-sedona__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
   </section>
   <section class="advantages">
     <h2 class="visually hidden"> Преимущества Седоны </h2>
@@ -49,7 +50,7 @@
         <h3 class="advantages__title advantages__title--white-theme">Настоящий городок</h3>
         <p class="advantages__description advantages__description--white-theme"> -№1-</p>
         <p class="advantages__description advantages__description--white-theme"> Седона - не аттракцион для туристов, там течет своя жизнь </p>
-      <img  src="..//source/img/photo-city@1x1.jpg" width="320" height="260" alt="Улицы Седоны">
+      <img  src="/img/photo-city@1x1.jpg" width="320" height="260" alt="Улицы Седоны">
     </li>
     <li class="advantages__item advantages__item--icon">
       <h4 class="advantages__title advantages__title--icon">Жилье</h4>
@@ -65,11 +66,10 @@
       <p class="advantages__description advantages__description--icon">Не только китайского, но и настоящего местного производства!</p>
     </li>
     <li class="advantages__item advantages__item--blue-theme">
-      <img src="..//source/img/photo-bridge@1x1.jpg" width="320" height="260" alt="Мост Дьявола">
+      <img src="/img/photo-bridge@1x1.jpg" width="320" height="260" alt="Мост Дьявола">
               <h3 class="advantages__title advantages__title--white-theme"> Там есть мост дьявола</h3>
         <p class="advantages__description advantages__description--white-theme"> -№2-</p>
         <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти! Если вы осмелитесь, разумеется </p>
-      </div>
     </li>
     <li class="advantages__item">
       <h3 class="advantages__title">Небольшая площадь</h3>
@@ -89,7 +89,45 @@
     </li>
     </ol>
   </section>
-
+<section class="find-hotel">
+<h2 class="find-hotel__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+<p class="find-hotel__descriprion">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+<button class="find-hotel__button button" type="button">Найти Гостиницу</button>
+</section>
+<section class="map">
+  <h2 class="visually hidden">Седона на карте </h2>
+  <img src="/img/map-mobile.jpg" width="320" height="350" alt="Карта">
+</section>
+<footer>
+<div class="footerhashtag">
+  <p class="hashtag__description">#visitSEDONA</p>
+</div>
+  <div class="social">
+    <ul class="social__list">
+      <li class="social__item">
+        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+          <span class="visually hidden"> Мы в Вконтакте</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+          <span class="visually hidden">Мы в Телеграме</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+          <span class="visually hidden">Мы в Ютубе</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <div class="html-academy">
+    <b class="copyright__description">Разработано:</b>
+    <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+      <svg aria-hidden="true" focusable="false" width="27" height="35" xmlns="http://www.w3.org/2000/svg"><path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"/></svg>
+    </a>
+  </div>
+</footer>
 </body>
 
 </html>
