--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body class="page__body">
+  <!--Шапка-->
   <header class="main-header">
     <a class="main-header__logo">
       <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
@@ -16,7 +17,7 @@
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__current">
+        <li class="site-list__item site-list__item--current">
           <a>Главная</a>
         </li>
         <li class="site-list__item">
@@ -31,13 +32,12 @@
       </ul>
     </nav>
   </header>
+  <!--Основное содержание-->
   <main class="main-container">
     <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1>
-  </main>
-  <section class="welcome">
-    <h2 class="visually hidden">Добро пожаловать в Седону</h2>
+  <header class="welcome">
     <img src="/img/text-index.svg" width="282" height="214" alt="Добро пожаловать в Седону">
-  </section>
+  </header>
   <section class="about-sedona">
     <h2 class="about-sedona__title">СЕДОНА — небольшой городок в Аризорне, заслуживающий большего!</h2>
     <p class="about-sedona__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -104,8 +104,10 @@
     <h2 class="visually hidden">Седона на карте </h2>
     <img src="/img/map-mobile.jpg" width="320" height="350" alt="Карта">
   </section>
+</main>
+<!--Подвал-->
   <footer>
-    <div class="footerhashtag">
+    <div class="footer hashtag">
       <p class="hashtag__description">#visitSEDONA</p>
     </div>
     <div class="social">
