--- a/source/form.html
+++ b/source/form.html
@@ -34,149 +34,144 @@
   </header>
   <!--Основное содержание-->
   <main class="main-container">
-      <h1 class="visually hidden">Формы</h1>
+    <h1 class="visually hidden">Формы</h1>
     <header class="welcome">
       <img src="/img/catalog/sedona.svg" width="229" height="39" alt="Седона">
     </header>
     <section class="about-catalog">
       <h2 class="about-catalog__title">Оставьте свой отзыв</h2>
-      <p class="about-catalog__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+      <p class="about-catalog__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
+        посещенных вами достопримечательностях</p>
     </section>
     <section class="forms">
       <h2 class="visually hidden">Формы для заполнения</h2>
       <form class="feedback" action="https://echo.htmlacademy.ru/" method="post">
         <fieldset class="feedback__field">
-          <legend class="feedback__fieldset">Представьтесь:</legend>
-        <label class="feedback__form-label" for="name">
-          ИМЯ*:</label>
-          <input class="feedback__field" type="text" id="name" name="name"
-            placeholder="Петр" required>
-            <label class="feedback__form-label" for="surname">
-              ФАМИЛИЯ*:</label>
-            <input class="feedback__field" type="text" id="surname" name="surname"
-              placeholder="Пустота" required>
-              <label class="feedback__form-label" for="father-name">
-                Отчество:</label>
-              <input class="feedback__field" type="text" id="father-name" name="father-name"
-                placeholder="Викторович" required>
-                          </fieldset>
-    <fielset class="feedback__field--contacts">
-      <legend class="feedback__legend">Контактная информация:</legend>
-      <label class="feedback__form-label" for="number" >Контактный телефон*:</label>
-      <input class="feedback__field" placeholder="Введите телефон" type="number" name="phone-number"
-        id="number" required>
+          <legend class="feedback__field">Представьтесь:</legend>
+          <label class="feedback__form-label" for="name">
+            ИМЯ*:</label>
+          <input class="feedback__field" type="text" id="name" name="name" placeholder="Петр" required>
+          <label class="feedback__form-label" for="surname">
+            ФАМИЛИЯ*:</label>
+          <input class="feedback__field" type="text" id="surname" name="surname" placeholder="Пустота" required>
+          <label class="feedback__form-label" for="father-name">
+            Отчество:</label>
+          <input class="feedback__field" type="text" id="father-name" name="father-name" placeholder="Викторович"
+            required>
+        </fieldset>
+        <fieldset class="feedback__field--contacts">
+          <legend class="feedback__legend">Контактная информация:</legend>
+          <label class="feedback__form-label" for="number">Контактный телефон*:</label>
+          <input class="feedback__field" placeholder="Введите телефон" type="tel" name="phone-number" id="number"
+            required>
 
-      <button class="feedback__button button" type="button">
-        <span class="visually-hidden">Телефон</span>
-      </button>
-      <label class="feedback__form-label" for="email" >Электронная почта*:</label>
-      <input class="feedback__field" placeholder="Введите e-mail" type="email" name="email"
-        id="email" required>
+          <button class="feedback__button button" type="button">
+            <span class="visually-hidden">Телефон</span>
+          </button>
+          <label class="feedback__form-label" for="email">Электронная почта*:</label>
+          <input class="feedback__field" placeholder="Введите e-mail" type="email" name="email" id="email" required>
 
-      <button class="feedback__button button" type="button">
-        <span class="visually-hidden">Почта</span>
-      </button>
-    </fielset>
-    <fielset class="feedback__field">
-      <legend class="feedback__legend">ВАше Общее впечатление:</legend>
-  <ul class="feedback__list">
-      <li class="feedback__item">
-        <label class="feedback__form-label">
-      <input class="feedback__input" type="radio" name="feedback" value="mostly positive"
-        checked>
-      <span class="control-label">Скорее положительное</span>
-    </label>
-  </li>
-  <li class="feedback__item">
-    <label class="feedback__form-label">
-  <input class="feedback__input" type="radio" name="feedback" value="mostly negative"
-    checked>
-  <span class="control-label">Скорее отрицательное</span>
-</label>
-</li>
-<li class="feedback__item">
-  <label class="feedback__form-label">
-<input class="feedback__input" type="radio" name="feedback" value="hard to say"
-  checked>
-<span class="control-label">Затрудняюсь ответить</span>
-</label>
-</li>
-</ul>
-</fielset>
-<fielset class="feedback__field">
-  <legend class="feedback__legend">посещенные достопримечательности:</legend>
-<ul class="feedback__list">
-<li class="feedback__item--checkbox">
-  <label class="feedback__form-label">
-    <input class="feedback__input" type="checkbox" name="devil's bridge" checked>
-    <span class="control-label">Мост Дьявола</span>
-  </label>
-</li>
-<li class="feedback__item--checkbox">
-  <label class="feedback__form-label">
-    <input class="feedback__input" type="checkbox" name="Mount bell" checked>
-    <span class="control-label">Гора-Колокол</span>
-  </label>
-</li>
-<li class="feedback__item--checkbox">
-  <label class="feedback__form-label">
-    <input class="feedback__input" type="checkbox" name="slise park" checked>
-    <span class="control-label">Слайд-парк</span>
-  </label>
-</li>
-<li class="feedback__item--checkbox">
-  <label class="feedback__form-label">
-    <input class="feedback__input" type="checkbox" name="red rocks">
-    <span class="control-label">Красные скалы</span>
-  </label>
-</li>
-</ul>
-</fielset>
-<fielset class="feedback__field">
-  <legend class="feedback__legend">Опишите свои эмоции:</legend>
-  <label class="feedback__form-label visually hidden" for="text" >Оставьте свой отзыв здесь</label>
-  <input class="feedback__field" placeholder="Опишите подробно все свои восторги " type="text" name="text"
-    id="text">
-    <button class="form__button button" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
-<p class="feedback__text">* — обязательные поля</p>
-</fielset>
-</form>
-</section>
-</main>
-<!--Подвал-->
-<footer>
-  <div class="footer hashtag">
-    <p class="hashtag__description">#visitSEDONA</p>
-  </div>
-  <div class="social">
-    <ul class="social__list">
-      <li class="social__item">
-        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-          <span class="visually hidden"> Мы в Вконтакте</span>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-          <span class="visually hidden">Мы в Телеграме</span>
-        </a>
-      </li>
-      <li class="social__item">
-        <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-          <span class="visually hidden">Мы в Ютубе</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="html-academy">
-    <b class="copyright__description">Разработано:</b>
-    <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-      <svg aria-hidden="true" focusable="false" width="27" height="35" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z" />
-      </svg>
-    </a>
-  </div>
-</footer>
+          <button class="feedback__button button" type="button">
+            <span class="visually-hidden">Почта</span>
+          </button>
+        </fieldset>
+        <fieldset class="feedback__field">
+          <legend class="feedback__legend">ВАше Общее впечатление:</legend>
+          <ul class="feedback__list">
+            <li class="feedback__item">
+              <label class="feedback__form-label">
+                <input class="feedback__input" type="radio" name="feedback" value="mostly positive" checked>
+                <span class="control-label">Скорее положительное</span>
+              </label>
+            </li>
+            <li class="feedback__item">
+              <label class="feedback__form-label">
+                <input class="feedback__input" type="radio" name="feedback" value="mostly negative" checked>
+                <span class="control-label">Скорее отрицательное</span>
+              </label>
+            </li>
+            <li class="feedback__item">
+              <label class="feedback__form-label">
+                <input class="feedback__input" type="radio" name="feedback" value="hard to say" checked>
+                <span class="control-label">Затрудняюсь ответить</span>
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="feedback__field">
+          <legend class="feedback__legend">посещенные достопримечательности:</legend>
+          <ul class="feedback__list">
+            <li class="feedback__item--checkbox">
+              <label class="feedback__form-label">
+                <input class="feedback__input" type="checkbox" name="devil's bridge" checked>
+                <span class="control-label">Мост Дьявола</span>
+              </label>
+            </li>
+            <li class="feedback__item--checkbox">
+              <label class="feedback__form-label">
+                <input class="feedback__input" type="checkbox" name="Mount bell" checked>
+                <span class="control-label">Гора-Колокол</span>
+              </label>
+            </li>
+            <li class="feedback__item--checkbox">
+              <label class="feedback__form-label">
+                <input class="feedback__input" type="checkbox" name="slise park" checked>
+                <span class="control-label">Слайд-парк</span>
+              </label>
+            </li>
+            <li class="feedback__item--checkbox">
+              <label class="feedback__form-label">
+                <input class="feedback__input" type="checkbox" name="red rocks">
+                <span class="control-label">Красные скалы</span>
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="feedback__field">
+          <legend class="feedback__legend">Опишите свои эмоции:</legend>
+          <label class="feedback__form-label visually hidden" for="text">Оставьте свой отзыв здесь</label>
+          <input class="feedback__field" placeholder="Опишите подробно все свои восторги " type="text" name="text"
+            id="text">
+          <button class="form__button button" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
+          <p class="feedback__text">* — обязательные поля</p>
+        </fieldset>
+      </form>
+    </section>
+  </main>
+  <!--Подвал-->
+  <footer>
+    <div class="footer hashtag">
+      <p class="hashtag__description">#visitSEDONA</p>
+    </div>
+    <div class="social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+            <span class="visually hidden"> Мы в Вконтакте</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+            <span class="visually hidden">Мы в Телеграме</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually hidden">Мы в Ютубе</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="html-academy">
+      <b class="copyright__description">Разработано:</b>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <svg aria-hidden="true" focusable="false" width="27" height="35" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z" />
+        </svg>
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
