--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,7 +13,7 @@
     <a class="header__logo">
       <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
     </a>
-    <navigation class="nav">
+    <nav class="nav">
       <button class="nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -31,7 +31,7 @@
           <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
         </li>
       </ul>
-    </navigation>
+    </nav>
   </header>
   <!--Основное содержание-->
   <main class="main-container">
@@ -51,40 +51,40 @@
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/landscape-mobile.jpg" width="280" height="280"
             alt="Неродные просторы">
-          <h3 class="text-block__title--catalog">Неродные просторы</h3>
-          <p class="text-block__description--catalog">Автор фото: Борис</p>
+          <h3 class="text-block__title text-block__title--catalog">Неродные просторы</h3>
+          <p class="text-block__description text-block__description--catalog">Автор фото: Борис</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title--catalog">1350</p>
+          <p class="text-block__title text-block__title--catalog">1350</p>
         </li>
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/flora-mobile.jpg" width="280" height="280"
             alt="Местная растительность">
-          <h3 class="text-block__title--catalog">Местная растительность</h3>
-          <p class="text-block__description--catalog">Автор фото: Сергей</p>
+          <h3 class="text-block__title text-block__title--catalog">Местная растительность</h3>
+          <p class="text-block__description text-block__description--catalog">Автор фото: Сергей</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title--catalog">143</p>
+          <p class="text-block__title text-block__title--catalog">143</p>
         </li>
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/road-mobile.jpg" width="280" height="280" alt="Дорога на север">
-          <h3 class="text-block__title--catalog">Дорога на север</h3>
-          <p class="text-block__description--catalog">Автор фото: Петр</p>
+          <h3 class="text-block__title text-block__title--catalog">Дорога на север</h3>
+          <p class="text-block__description text-block__description--catalog">Автор фото: Петр</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title--catalog">96</p>
+          <p class="text-block__title text-block__title--catalog">96</p>
         </li>
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/bridge-mobile.jpg" width="280" height="280" alt="Мост дьявола">
-          <h3 class="text-block__title--catalog">Мост дьявола</h3>
-          <p class="text-block__description--catalog">Автор фото: Антон</p>
+          <h3 class="text-block__title text-block__title--catalog">Мост дьявола</h3>
+          <p class="text-block__description text-block__description--catalog">Автор фото: Антон</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title--catalog">254</p>
+          <p class="text-block__title text-block__title--catalog">254</p>
         </li>
       </ul>
     </section>
@@ -105,17 +105,17 @@
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-            <span class="visually hidden"> Мы в Вконтакте</span>
+            <span class="visually-hidden"> Мы в Вконтакте</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-            <span class="visually hidden">Мы в Телеграме</span>
+            <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually hidden">Мы в Ютубе</span>
+            <span class="visually-hidden">Мы в Ютубе</span>
           </a>
         </li>
       </ul>
