--- a/source/form.html
+++ b/source/form.html
@@ -13,7 +13,7 @@
     <a class="header__logo">
       <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
     </a>
-    <navigation class="nav">
+    <nav class="nav">
       <button class="nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -31,7 +31,7 @@
           <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
         </li>
       </ul>
-    </navigation>
+    </nav>
   </header>
   <!--Основное содержание-->
   <main class="main-container">
@@ -63,15 +63,15 @@
         <fieldset class="feedback__field">
           <legend class="text-block__title">Контактная информация:</legend>
           <label class="feedback__form-label" for="number">Контактный телефон*:</label>
-          <input class="feedback__input--contacts" placeholder="Введите телефон" type="tel" name="phone-number"
-            id="number" required>
+          <input class="feedback__input feedback__input--contacts" placeholder="Введите телефон" type="tel"
+            name="phone-number" id="number" required>
 
           <button class="feedback__button button" type="button">
             <span class="visually-hidden">Телефон</span>
           </button>
           <label class="feedback__form-label" for="email">Электронная почта*:</label>
-          <input class="feedback__input--contacts" placeholder="Введите e-mail" type="email" name="email" id="email"
-            required>
+          <input class="feedback__input feedback__input--contacts" placeholder="Введите e-mail" type="email"
+            name="email" id="email" required>
 
           <button class="feedback__button button" type="button">
             <span class="visually-hidden">Почта</span>
@@ -132,9 +132,8 @@
         <fieldset class="feedback__field">
           <legend class="text-block__title">Опишите свои эмоции:</legend>
 
-          <textarea class="feedback__input--text" type="text" name="text"
-            id="text">Опишите подробно все свои восторги </textarea>
-          <button class="form__button button" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
+          <textarea class="feedback__input--text" name="text" id="text">Опишите подробно все свои восторги </textarea>
+          <button class="button-blue button-blue--form" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
           <p class="feedback__text">* — обязательные поля</p>
         </fieldset>
       </form>
@@ -149,17 +148,17 @@
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-            <span class="visually hidden"> Мы в Вконтакте</span>
+            <span class="visually-hidden"> Мы в Вконтакте</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-            <span class="visually hidden">Мы в Телеграме</span>
+            <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually hidden">Мы в Ютубе</span>
+            <span class="visually-hidden">Мы в Ютубе</span>
           </a>
         </li>
       </ul>
@@ -177,3 +176,26 @@
 </body>
 
 </html>
+
+<!--Модальные окна
+<div class="modal-container">
+      <div class="modal modal--error">
+              <section class="modal__content">
+                <h2 class="text-block__title">Что-то пошло не так!</h2>
+                <p class="text-block__description"> Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+                <button class="button-blue button-blue--error" type="submit">ОK</button>
+              </section>
+            </div>
+            </div>
+
+            <div class="modal-container">
+              <div class="modal modal--success">
+                      <section class="modal__content">
+                        <h2 class="text-block__title">Ваш отзыв отправлен!</h2>
+                        <p class="text-block__description"> Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+                        <button class="button-blue button-blue--success" type="submit">Закрыть окно</button>
+                      </section>
+                    </div>
+                    </div>
+
+-->
