--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
     <a class="header__logo">
       <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
     </a>
-    <navigation class="nav">
+    <nav class="nav">
       <button class="nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -31,7 +31,7 @@
           <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
         </li>
       </ul>
-    </navigation>
+    </nav>
   </header>
   <!--Основное содержание-->
   <main class="main-container">
@@ -44,7 +44,7 @@
       <p class="text-block__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </section>
     <section class="advantages">
-      <h2 class="visually hidden"> Преимущества Седоны </h2>
+      <h2 class="visually-hidden"> Преимущества Седоны </h2>
       <ol class="advantages__list">
 
         <li class="advantages__item advantages__item--blue-theme">
@@ -100,10 +100,10 @@
     </section>
     <section class="find-hotel">
       <h2 class="text-block__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-      <p class="text-block__descriprion">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+      <p class="text-block__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
         гостиниц
         в седоне</p>
-      <button class="find-hotel__button button" type="button">Найти Гостиницу</button>
+      <button class="find-hotel__button button-blue" type="button">Найти Гостиницу</button>
     </section>
     <section class="map">
       <h2 class="visually-hidden">Седона на карте </h2>
@@ -119,17 +119,17 @@
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-            <span class="visually hidden"> Мы в Вконтакте</span>
+            <span class="visually-hidden"> Мы в Вконтакте</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-            <span class="visually hidden">Мы в Телеграме</span>
+            <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually hidden">Мы в Ютубе</span>
+            <span class="visually-hidden">Мы в Ютубе</span>
           </a>
         </li>
       </ul>
