--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,12 +36,13 @@
   <!--Основное содержание-->
   <main class="main-container">
     <h1 class="visually-hidden">Фото и видео</h1>
-    <header class="welcome--catalog">
-      <img class="welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39" alt="Седона">
+    <header class="welcome welcome--catalog">
+      <img class="welcome__img welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39"
+        alt="Седона">
     </header>
     <section class="about-catalog">
-      <h2 class="text-block__title">Фото и видео</h2>
-      <p class="text-block__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть
+      <h2 class="about-catalog__title">Фото и видео</h2>
+      <p class="about-catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть
         о
         политике и экономике.</p>
     </section>
@@ -51,46 +52,46 @@
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/landscape-mobile.jpg" width="280" height="280"
             alt="Неродные просторы">
-          <h3 class="text-block__title text-block__title--catalog">Неродные просторы</h3>
-          <p class="text-block__description text-block__description--catalog">Автор фото: Борис</p>
+          <h3 class="fotoalbum__title">Неродные просторы</h3>
+          <p class="fotoalbum__description">Автор фото: Борис</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title text-block__title--catalog">1350</p>
+          <p class="fotoalbum__number">1350</p>
         </li>
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/flora-mobile.jpg" width="280" height="280"
             alt="Местная растительность">
-          <h3 class="text-block__title text-block__title--catalog">Местная растительность</h3>
-          <p class="text-block__description text-block__description--catalog">Автор фото: Сергей</p>
+          <h3 class="fotoalbum__title">Местная растительность</h3>
+          <p class="fotoalbum__description">Автор фото: Сергей</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title text-block__title--catalog">143</p>
+          <p class="fotoalbum__number">143</p>
         </li>
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/road-mobile.jpg" width="280" height="280" alt="Дорога на север">
-          <h3 class="text-block__title text-block__title--catalog">Дорога на север</h3>
-          <p class="text-block__description text-block__description--catalog">Автор фото: Петр</p>
+          <h3 class="fotoalbum__title">Дорога на север</h3>
+          <p class="fotoalbum__description">Автор фото: Петр</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title text-block__title--catalog">96</p>
+          <p class="fotoalbum__number">96</p>
         </li>
         <li class="fotoalbum__item">
           <img class="fotoalbum__img" src="/img/catalog/bridge-mobile.jpg" width="280" height="280" alt="Мост дьявола">
-          <h3 class="text-block__title text-block__title--catalog">Мост дьявола</h3>
-          <p class="text-block__description text-block__description--catalog">Автор фото: Антон</p>
+          <h3 class="fotoalbum__title">Мост дьявола</h3>
+          <p class="fotoalbum__description">Автор фото: Антон</p>
           <button class="fotoalbum__button button" type="button">
             <span class="visually-hidden">Лайк</span>
           </button>
-          <p class="text-block__title text-block__title--catalog">254</p>
+          <p class="fotoalbum__number">254</p>
         </li>
       </ul>
     </section>
     <section class="video">
-      <h2 class="text-block__title">Все еще сомневаетесь?</h2>
-      <p class="text-block__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
+      <h2 class="video__title">Все еще сомневаетесь?</h2>
+      <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
         очередной
         раз!</p>
       <img class="video__img" src="/img/catalog/video-mobile.jpg" width="280" height="177" alt="Видеопрезентация">
