--- a/source/form.html
+++ b/source/form.html
@@ -36,12 +36,13 @@
   <!--Основное содержание-->
   <main class="main-container">
     <h1 class="visually-hidden">Формы</h1>
-    <header class="welcome--catalog">
-      <img class="welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39" alt="Седона">
+    <header class="welcome welcome--catalog">
+      <img class="welcome__img welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39"
+        alt="Седона">
     </header>
     <section class="about-form">
-      <h2 class="text-block__title">Оставьте свой отзыв</h2>
-      <p class="text-block__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
+      <h2 class="about-form__title">Оставьте свой отзыв</h2>
+      <p class="about-form__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
         посещенных вами достопримечательностях</p>
     </section>
     <section class="forms">
@@ -66,14 +67,14 @@
           <input class="feedback__input feedback__input--contacts" placeholder="Введите телефон" type="tel"
             name="phone-number" id="number" required>
 
-          <button class="feedback__button button" type="button">
+          <button class="feedback__button" type="button">
             <span class="visually-hidden">Телефон</span>
           </button>
           <label class="feedback__form-label" for="email">Электронная почта*:</label>
           <input class="feedback__input feedback__input--contacts" placeholder="Введите e-mail" type="email"
             name="email" id="email" required>
 
-          <button class="feedback__button button" type="button">
+          <button class="feedback__button" type="button">
             <span class="visually-hidden">Почта</span>
           </button>
         </fieldset>
@@ -133,7 +134,7 @@
           <legend class="text-block__title">Опишите свои эмоции:</legend>
 
           <textarea class="feedback__input--text" name="text" id="text">Опишите подробно все свои восторги </textarea>
-          <button class="button-blue button-blue--form" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
+          <button class="button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
           <p class="feedback__text">* — обязательные поля</p>
         </fieldset>
       </form>
@@ -178,22 +179,22 @@
 </html>
 
 <!--Модальные окна
-<div class="modal-container">
+<div class="modal modal__container">
       <div class="modal modal--error">
               <section class="modal__content">
                 <h2 class="text-block__title">Что-то пошло не так!</h2>
                 <p class="text-block__description"> Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-                <button class="button-blue button-blue--error" type="submit">ОK</button>
+                <button class="button modal__button--error" type="submit">ОK</button>
               </section>
             </div>
             </div>
 
-            <div class="modal-container">
+            <div class="modal modal__container">
               <div class="modal modal--success">
                       <section class="modal__content">
                         <h2 class="text-block__title">Ваш отзыв отправлен!</h2>
                         <p class="text-block__description"> Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
-                        <button class="button-blue button-blue--success" type="submit">Закрыть окно</button>
+                        <button class="button modal__button--success" type="submit">Закрыть окно</button>
                       </section>
                     </div>
                     </div>
