--- a/source/index.html
+++ b/source/index.html
@@ -48,62 +48,62 @@
       <ol class="advantages__list">
 
         <li class="advantages__item advantages__item--blue-theme">
-          <h3 class="text-block__title text-block__title--white-theme">Настоящий городок</h3>
-          <p class="text-block__description text-block__description--white-theme"> -№1-</p>
-          <p class="text-block__description text-block__description--white-theme"> Седона - не аттракцион для туристов,
+          <h3 class="advantages__title advantages__title--white-theme">Настоящий городок</h3>
+          <p class="advantages__description advantages__description--white-theme"> -№1-</p>
+          <p class="advantages__description advantages__description--white-theme"> Седона - не аттракцион для туристов,
             там течет своя жизнь </p>
           <img class="advantages__img" src="/img/photo-city@1x1.jpg" width="320" height="260" alt="Улицы Седоны">
         </li>
         <li class="advantages__item advantages__item--icon">
-          <h4 class="text-block__title text-block__title--icon">Жилье</h4>
-          <p class="text-block__description text-block__description--icon">Рекомендуем пожить в настоящем мотеле, все
+          <h4 class="advantages__title advantages__title--icon">Жилье</h4>
+          <p class="advantages__description advantages__description--icon">Рекомендуем пожить в настоящем мотеле, все
             как
             в кино!</p>
         </li>
         <li class="advantages__item advantages__item--icon">
-          <h4 class="text-block__title text-block__title--icon">Еда</h4>
-          <p class="text-block__description text-block__description--icon">Всегда заказывайте топовый фирменный бургер,
+          <h4 class="advantages__title advantages__title--icon">Еда</h4>
+          <p class="advantages__description advantages__description--icon">Всегда заказывайте топовый фирменный бургер,
             вы
             не разочаруетесь!
           </p>
         </li>
         <li class="advantages__item advantages__item--icon">
-          <h4 class="text-block__title text-block__title--icon">Сувениры</h4>
-          <p class="text-block__description text-block__description--icon">Не только китайского, но и настоящего
+          <h4 class="advantages__title advantages__title--icon">Сувениры</h4>
+          <p class="advantages__description advantages__description--icon">Не только китайского, но и настоящего
             местного
             производства!</p>
         </li>
         <li class="advantages__item advantages__item--blue-theme">
-          <h3 class="text-block__title text-block__title--white-theme"> Там есть мост дьявола</h3>
-          <p class="text-block__description text-block__description--white-theme"> -№2-</p>
-          <p class="text-block__description text-block__description--white-theme">Да, по нему можно пройти! Если вы
+          <h3 class="advantages__title advantages__title--white-theme"> Там есть мост дьявола</h3>
+          <p class="advantages__description advantages__description--white-theme"> -№2-</p>
+          <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти! Если вы
             осмелитесь, разумеется </p>
           <img class="advantages__img" src="/img/photo-bridge@1x1.jpg" width="320" height="260" alt="Мост Дьявола">
         </li>
         <li class="advantages__item">
-          <h3 class="text-block__title">Небольшая площадь</h3>
-          <p class="text-block__description">-№3-</p>
-          <p class="text-block__description"> Все достопримечательности находятся очень близко</p>
+          <h3 class="advantages__title">Небольшая площадь</h3>
+          <p class="advantages__description">-№3-</p>
+          <p class="advantages__description"> Все достопримечательности находятся очень близко</p>
         </li>
         <li class="advantages__item">
 
-          <h3 class="text-block__title">Красивая дорога</h3>
-          <p class="text-block__description">-№4-</p>
-          <p class="text-block__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <h3 class="advantages__title">Красивая дорога</h3>
+          <p class="advantages__description">-№4-</p>
+          <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li class="advantages__item">
-          <h3 class="text-block__title">Мало туристов</h3>
-          <p class="text-block__description"> -№5-</p>
-          <p class="text-block__description"> Большинство едет в Гранд Каньон и толпится там</p>
+          <h3 class="advantages__title">Мало туристов</h3>
+          <p class="advantages__description"> -№5-</p>
+          <p class="advantages__description"> Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ol>
     </section>
     <section class="find-hotel">
-      <h2 class="text-block__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-      <p class="text-block__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+      <h2 class="find-hotel__title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+      <p class="find-hotel__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
         гостиниц
         в седоне</p>
-      <button class="find-hotel__button button-blue" type="button">Найти Гостиницу</button>
+      <button class="find-hotel__button button" type="button">Найти Гостиницу</button>
     </section>
     <section class="map">
       <h2 class="visually-hidden">Седона на карте </h2>
