--- a/source/form.html
+++ b/source/form.html
@@ -4,166 +4,168 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
   <!--Шапка-->
-  <header class="main-header">
-    <a class="main-header__logo">
+  <header class="header">
+    <a class="header__logo">
       <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
     </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+    <nav class="nav">
+      <button class="nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <ul class="main-nav__list site-list">
+      <ul class="nav__list site-list">
         <li class="site-list__item">
-          <a>Главная</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
-          <a href="catalog.html">Фото и видео</a>
-        </li>
-        <li class="site-list__item site-list__item--current">
-          <a href="form.html">Форма отзыва</a>
+          <a class="site-list__link" href="catalog.html">Фото и видео</a>
         </li>
         <li class="site-list__item">
-          <a href="https://htmlacademy.ru">html Academy</a>
+          <a class="site-list__link site-list__item--current">Форма отзыва</a>
+        </li>
+        <li class="site-list__item">
+          <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
         </li>
       </ul>
     </nav>
   </header>
   <!--Основное содержание-->
   <main class="main-container">
-    <h1 class="visually hidden">Формы</h1>
-    <header class="welcome">
-      <img src="/img/catalog/sedona.svg" width="229" height="39" alt="Седона">
+    <h1 class="visually-hidden">Формы</h1>
+    <header class="welcome welcome--catalog">
+      <img class="welcome__img welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39"
+        alt="Седона">
     </header>
-    <section class="about-catalog">
-      <h2 class="about-catalog__title">Оставьте свой отзыв</h2>
-      <p class="about-catalog__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
+    <section class="about-form">
+      <h2 class="about-form__title">Оставьте свой отзыв</h2>
+      <p class="about-form__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
         посещенных вами достопримечательностях</p>
     </section>
     <section class="forms">
-      <h2 class="visually hidden">Формы для заполнения</h2>
+      <h2 class="visually-hidden">Формы для заполнения</h2>
       <form class="feedback" action="https://echo.htmlacademy.ru/" method="post">
         <fieldset class="feedback__field">
-          <legend class="feedback__field">Представьтесь:</legend>
+          <legend class="text-block__title">Представьтесь:</legend>
           <label class="feedback__form-label" for="name">
             ИМЯ*:</label>
-          <input class="feedback__field" type="text" id="name" name="name" placeholder="Петр" required>
+          <input class="feedback__input" type="text" id="name" name="name" placeholder="Петр" required>
           <label class="feedback__form-label" for="surname">
             ФАМИЛИЯ*:</label>
-          <input class="feedback__field" type="text" id="surname" name="surname" placeholder="Пустота" required>
+          <input class="feedback__input" type="text" id="surname" name="surname" placeholder="Пустота" required>
           <label class="feedback__form-label" for="father-name">
             Отчество:</label>
-          <input class="feedback__field" type="text" id="father-name" name="father-name" placeholder="Викторович"
+          <input class="feedback__input" type="text" id="father-name" name="father-name" placeholder="Викторович"
             required>
         </fieldset>
-        <fieldset class="feedback__field--contacts">
-          <legend class="feedback__legend">Контактная информация:</legend>
+        <fieldset class="feedback__field">
+          <legend class="text-block__title">Контактная информация:</legend>
           <label class="feedback__form-label" for="number">Контактный телефон*:</label>
-          <input class="feedback__field" placeholder="Введите телефон" type="tel" name="phone-number" id="number"
-            required>
+          <input class="feedback__input feedback__input--contacts" placeholder="Введите телефон" type="tel"
+            name="phone-number" id="number" required>
 
-          <button class="feedback__button button" type="button">
+          <button class="feedback__button" type="button">
             <span class="visually-hidden">Телефон</span>
           </button>
           <label class="feedback__form-label" for="email">Электронная почта*:</label>
-          <input class="feedback__field" placeholder="Введите e-mail" type="email" name="email" id="email" required>
+          <input class="feedback__input feedback__input--contacts" placeholder="Введите e-mail" type="email"
+            name="email" id="email" required>
 
-          <button class="feedback__button button" type="button">
+          <button class="feedback__button" type="button">
             <span class="visually-hidden">Почта</span>
           </button>
         </fieldset>
         <fieldset class="feedback__field">
-          <legend class="feedback__legend">ВАше Общее впечатление:</legend>
+          <legend class="text-block__title">ВАше Общее впечатление:</legend>
           <ul class="feedback__list">
             <li class="feedback__item">
               <label class="feedback__form-label">
-                <input class="feedback__input" type="radio" name="feedback" value="mostly positive" checked>
+                <input class="feedback__choice" type="radio" name="feedback" value="mostly positive" checked>
                 <span class="control-label">Скорее положительное</span>
               </label>
             </li>
             <li class="feedback__item">
               <label class="feedback__form-label">
-                <input class="feedback__input" type="radio" name="feedback" value="mostly negative" checked>
+                <input class="feedback__choice" type="radio" name="feedback" value="mostly negative" checked>
                 <span class="control-label">Скорее отрицательное</span>
               </label>
             </li>
             <li class="feedback__item">
               <label class="feedback__form-label">
-                <input class="feedback__input" type="radio" name="feedback" value="hard to say" checked>
+                <input class="feedback__choice" type="radio" name="feedback" value="hard to say" checked>
                 <span class="control-label">Затрудняюсь ответить</span>
               </label>
             </li>
           </ul>
         </fieldset>
         <fieldset class="feedback__field">
-          <legend class="feedback__legend">посещенные достопримечательности:</legend>
+          <legend class="text-block__title">посещенные достопримечательности:</legend>
           <ul class="feedback__list">
             <li class="feedback__item--checkbox">
               <label class="feedback__form-label">
-                <input class="feedback__input" type="checkbox" name="devil's bridge" checked>
+                <input class="feedback__choice" type="checkbox" name="devil's bridge" checked>
                 <span class="control-label">Мост Дьявола</span>
               </label>
             </li>
             <li class="feedback__item--checkbox">
               <label class="feedback__form-label">
-                <input class="feedback__input" type="checkbox" name="Mount bell" checked>
+                <input class="feedback__choice" type="checkbox" name="Mount bell" checked>
                 <span class="control-label">Гора-Колокол</span>
               </label>
             </li>
             <li class="feedback__item--checkbox">
               <label class="feedback__form-label">
-                <input class="feedback__input" type="checkbox" name="slise park" checked>
+                <input class="feedback__choice" type="checkbox" name="slise park" checked>
                 <span class="control-label">Слайд-парк</span>
               </label>
             </li>
             <li class="feedback__item--checkbox">
               <label class="feedback__form-label">
-                <input class="feedback__input" type="checkbox" name="red rocks">
+                <input class="feedback__choice" type="checkbox" name="red rocks">
                 <span class="control-label">Красные скалы</span>
               </label>
             </li>
           </ul>
         </fieldset>
         <fieldset class="feedback__field">
-          <legend class="feedback__legend">Опишите свои эмоции:</legend>
-          <label class="feedback__form-label visually hidden" for="text">Оставьте свой отзыв здесь</label>
-          <input class="feedback__field" placeholder="Опишите подробно все свои восторги " type="text" name="text"
-            id="text">
-          <button class="form__button button" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
+          <legend class="text-block__title">Опишите свои эмоции:</legend>
+
+          <textarea class="feedback__input--text" name="text" id="text">Опишите подробно все свои восторги </textarea>
+          <button class="button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
           <p class="feedback__text">* — обязательные поля</p>
         </fieldset>
       </form>
     </section>
   </main>
   <!--Подвал-->
-  <footer>
-    <div class="footer hashtag">
+  <footer class="footer">
+    <div class="hashtag">
       <p class="hashtag__description">#visitSEDONA</p>
     </div>
     <div class="social">
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-            <span class="visually hidden"> Мы в Вконтакте</span>
+            <span class="visually-hidden"> Мы в Вконтакте</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-            <span class="visually hidden">Мы в Телеграме</span>
+            <span class="visually-hidden">Мы в Телеграме</span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually hidden">Мы в Ютубе</span>
+            <span class="visually-hidden">Мы в Ютубе</span>
           </a>
         </li>
       </ul>
     </div>
     <div class="html-academy">
-      <b class="copyright__description">Разработано:</b>
+      <b class="text-block__description">Разработано:</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <svg aria-hidden="true" focusable="false" width="27" height="35" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -175,3 +177,26 @@
 </body>
 
 </html>
+
+<!--Модальные окна
+<div class="modal modal__container">
+      <div class="modal modal--error">
+              <section class="modal__content">
+                <h2 class="text-block__title">Что-то пошло не так!</h2>
+                <p class="text-block__description"> Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+                <button class="button modal__button--error" type="submit">ОK</button>
+              </section>
+            </div>
+            </div>
+
+            <div class="modal modal__container">
+              <div class="modal modal--success">
+                      <section class="modal__content">
+                        <h2 class="text-block__title">Ваш отзыв отправлен!</h2>
+                        <p class="text-block__description"> Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+                        <button class="button modal__button--success" type="submit">Закрыть окно</button>
+                      </section>
+                    </div>
+                    </div>
+
+-->
