Адаптирует хедер и навигацию

--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,6 +18,7 @@
       <button class="nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
+      <div class="nav__wrapper">
       <ul class="nav__list site-list">
         <li class="site-list__item site-list__item--current">
           <a class="site-list__link">Главная</a>
@@ -31,6 +33,7 @@
           <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
         </li>
       </ul>
+      </div>
     </nav>
   </header>
   <!--Основное содержание-->
