--- a/source/form.html
+++ b/source/form.html
@@ -9,6 +9,8 @@
 </head>
 
 <body class="page__body">
+  <div class="page__container">
+    <div class="page__shadow">
   <!--Шапка-->
   <header class="header">
     <a class="header__logo">
@@ -175,6 +177,8 @@
       </a>
     </div>
   </footer>
+  </div>
+  </div>
 </body>
 
 </html>
