Навигация почти получилась

--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,17 @@
     <div class="page__shadow">
       <!--Шапка-->
       <header class="header">
-        <a class="header__logo">
-          <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
+        <a class="header__logo" href="index.html">
+          <img class="header_img" src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
         </a>
-        <nav class="nav">
+        <nav class="nav nav--closed nav--nojs">
           <button class="nav__toggle" type="button">
+            <svg class="nav__img--closed" aria-hidden="true" focusable="false" width="23" height="22" xmlns="http://www.w3.org/2000/svg">
+              <path d="M22.9 0H0v4h22.9V0Zm0 9H0v4h22.9V9Zm0 9H0v4h22.9v-4Z"/>
+            </svg>
+<svg class="nav__img--opened" aria-hidden="true" focusable="false" width="23" height="23" xmlns="http://www.w3.org/2000/svg">
+  <path d="M22.2 2.8 19.4 0l-8.3 8.3L2.8 0 0 2.8l8.3 8.3L0 19.4l2.8 2.8 8.3-8.3 8.3 8.3 2.8-2.8-8.3-8.3 8.3-8.3Z"/>
+</svg>
             <span class="visually-hidden">Открыть меню</span>
           </button>
           <div class="nav__wrapper">
