:heavy_check_mark: Сборка #5

--- a/5/catalog.html
+++ b/5/catalog.html
@@ -52,7 +52,7 @@
       <main class="main-container">
         <h1 class="visually-hidden">Фото и видео</h1>
         <header class="welcome welcome--catalog">
-          <img class="welcome__img welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39"
+          <img class="welcome__img welcome__img--catalog" src="img/catalog/sedona.svg" width="229" height="39"
             alt="Седона">
         </header>
         <section class="about-catalog">
@@ -66,7 +66,7 @@
           <h2 class="visually-hidden">Фотоальбом</h2>
           <ul class="fotoalbum__list">
             <li class="fotoalbum__item fotoalbum__item--first">
-              <img class="fotoalbum__img" src="/img/catalog/landscape-mobile.jpg" width="280" height="280"
+              <img class="fotoalbum__img" src="img/catalog/landscape-mobile.jpg" width="280" height="280"
                 alt="Неродные просторы">
               <div class="fotoalbum__text-wrapper">
                 <h3 class="fotoalbum__title">Неродные просторы</h3>
@@ -85,7 +85,7 @@
               </div>
             </li>
             <li class="fotoalbum__item">
-              <img class="fotoalbum__img" src="/img/catalog/flora-mobile.jpg" width="280" height="280"
+              <img class="fotoalbum__img" src="img/catalog/flora-mobile.jpg" width="280" height="280"
                 alt="Местная растительность">
               <div class="fotoalbum__text-wrapper">
                 <h3 class="fotoalbum__title">Местная растительность</h3>
@@ -105,7 +105,7 @@
 
             </li>
             <li class="fotoalbum__item">
-              <img class="fotoalbum__img" src="/img/catalog/road-mobile.jpg" width="280" height="280"
+              <img class="fotoalbum__img" src="img/catalog/road-mobile.jpg" width="280" height="280"
                 alt="Дорога на север">
               <div class="fotoalbum__text-wrapper">
                 <h3 class="fotoalbum__title">Дорога на север</h3>
@@ -124,7 +124,7 @@
               </div>
             </li>
             <li class="fotoalbum__item">
-              <img class="fotoalbum__img" src="/img/catalog/bridge-mobile.jpg" width="280" height="280"
+              <img class="fotoalbum__img" src="img/catalog/bridge-mobile.jpg" width="280" height="280"
                 alt="Мост дьявола">
               <div class="fotoalbum__text-wrapper">
                 <h3 class="fotoalbum__title">Мост дьявола</h3>
