--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico"><!-- 32×32 -->
+  <link rel="icon" href="img/favicons/favicon-svg.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180.png"> <!-- 180×180 -->
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page__body">
@@ -14,7 +18,7 @@
       <!--Шапка-->
       <header class="header">
         <a class="header__logo">
-          <img class="header__img" src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
+          <img class="header__img" src="img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
         </a>
         <nav class="nav nav--closed nav--nojs">
           <div class="nav__wrapper">
@@ -51,8 +55,12 @@
       <main class="main-container">
         <h1 class="visually-hidden">Фото и видео</h1>
         <header class="welcome welcome--catalog">
-          <img class="welcome__img welcome__img--catalog" src="img/catalog/sedona.svg" width="229" height="39"
-            alt="Седона">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/catalog/sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/catalog/sedona-desktop.svg">
+            <img class="welcome__img welcome__img--catalog" src="img/catalog/sedona.svg" width="229" height="39"
+              alt="Седона">
+          </picture>
         </header>
         <section class="about-catalog">
           <h2 class="about-catalog__title">Фото и видео</h2>
@@ -65,80 +73,120 @@
           <h2 class="visually-hidden">Фотоальбом</h2>
           <ul class="fotoalbum__list">
             <li class="fotoalbum__item fotoalbum__item--first">
-              <img class="fotoalbum__img" src="img/catalog/landscape-mobile.jpg" width="280" height="280"
-                alt="Неродные просторы">
-              <div class="fotoalbum__text-wrapper">
-                <h3 class="fotoalbum__title">Неродные просторы</h3>
-                <p class="fotoalbum__description">Автор фото: Борис</p>
+              <div class="fotoalbum__picture-wrapper fotoalbum__picture-wrapper--first-line">
+                <picture>
+                  <source media="(min-width: 1200px)"
+                    srcset="img/catalog/landscape-desktop.jpg 1x, img/catalog/landscape-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/landscape-tablet.jpg 1x, img/catalog/landscape-tablet@2x.jpg 2x">
+                  <img class="fotoalbum__img fotoalbum__img--first-line" src="img/catalog/landscape-mobile.jpg"
+                    width="280" height="280" srcset="img/catalog/landscape-mobile@2x.jpg 2x" alt="Неродные просторы">
+                </picture>
               </div>
-              <div class="fotoalbum__number-wrapper">
-                <button class="fotoalbum__button" type="button">
-                  <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
-                  </svg>
-                  <span class="visually-hidden">Лайк</span>
-                </button>
-                <p class="fotoalbum__number">1350</p>
+              <div class="fotoalbum__wrapper">
+                <div class="fotoalbum__text-wrapper">
+                  <h3 class="fotoalbum__title">Неродные просторы</h3>
+                  <p class="fotoalbum__description">Автор фото: Борис</p>
+                </div>
+                <div class="fotoalbum__number-wrapper">
+                  <button class="fotoalbum__button" type="button">
+                    <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
+                    </svg>
+                    <span class="visually-hidden">Лайк</span>
+                  </button>
+                  <p class="fotoalbum__number">1350</p>
+                </div>
               </div>
             </li>
             <li class="fotoalbum__item">
-              <img class="fotoalbum__img" src="img/catalog/flora-mobile.jpg" width="280" height="280"
-                alt="Местная растительность">
-              <div class="fotoalbum__text-wrapper">
-                <h3 class="fotoalbum__title">Местная растительность</h3>
-                <p class="fotoalbum__description">Автор фото: Сергей</p>
+              <div class="fotoalbum__picture-wrapper">
+                <picture>
+                  <source media="(min-width: 1200px)"
+                    srcset="img/catalog/flora-desktop.jpg 1x, img/catalog/flora-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/flora-tablet.jpg 1x, img/catalog/flora-tablet@2x.jpg 2x">
+                  <img class="fotoalbum__img" src="img/catalog/flora-mobile.jpg" width="280" height="280"
+                    srcset="img/catalog/flora-mobile@2x.jpg 2x" alt="Местная растительность">
+                </picture>
               </div>
-              <div class="fotoalbum__number-wrapper">
-                <button class="fotoalbum__button" type="button">
-                  <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
-                  </svg>
-                  <span class="visually-hidden">Лайк</span>
-                </button>
-                <p class="fotoalbum__number">143</p>
+              <div class="fotoalbum__wrapper">
+                <div class="fotoalbum__text-wrapper">
+                  <h3 class="fotoalbum__title">Местная растительность</h3>
+                  <p class="fotoalbum__description">Автор фото: Сергей</p>
+                </div>
+                <div class="fotoalbum__number-wrapper">
+                  <button class="fotoalbum__button" type="button">
+                    <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
+                    </svg>
+                    <span class="visually-hidden">Лайк</span>
+                  </button>
+                  <p class="fotoalbum__number">143</p>
+                </div>
               </div>
 
             </li>
             <li class="fotoalbum__item">
-              <img class="fotoalbum__img" src="img/catalog/road-mobile.jpg" width="280" height="280"
-                alt="Дорога на север">
-              <div class="fotoalbum__text-wrapper">
-                <h3 class="fotoalbum__title">Дорога на север</h3>
-                <p class="fotoalbum__description">Автор фото: Петр</p>
+              <div class="fotoalbum__picture-wrapper">
+                <picture>
+                  <source media="(min-width: 1200px)"
+                    srcset="img/catalog/road-desktop.jpg 1x, img/catalog/road-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/road-tablet.jpg 1x, img/catalog/road-tablet@2x.jpg 2x">
+                  <img class="fotoalbum__img" src="img/catalog/road-mobile.jpg" width="280" height="280"
+                    srcset="img/catalog/road-mobile@2x.jpg 2x" alt="Дорога на север">
+                </picture>
               </div>
-              <div class="fotoalbum__number-wrapper">
-                <button class="fotoalbum__button" type="button">
-                  <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
-                  </svg>
-                  <span class="visually-hidden">Лайк</span>
-                </button>
-                <p class="fotoalbum__number">96</p>
+              <div class="fotoalbum__wrapper">
+                <div class="fotoalbum__text-wrapper">
+                  <h3 class="fotoalbum__title">Дорога на север</h3>
+                  <p class="fotoalbum__description">Автор фото: Петр</p>
+                </div>
+                <div class="fotoalbum__number-wrapper">
+                  <button class="fotoalbum__button" type="button">
+                    <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
+                    </svg>
+                    <span class="visually-hidden">Лайк</span>
+                  </button>
+                  <p class="fotoalbum__number">96</p>
+                </div>
               </div>
             </li>
             <li class="fotoalbum__item">
-              <img class="fotoalbum__img" src="img/catalog/bridge-mobile.jpg" width="280" height="280"
-                alt="Мост дьявола">
-              <div class="fotoalbum__text-wrapper">
-                <h3 class="fotoalbum__title">Мост дьявола</h3>
-                <p class="fotoalbum__description">Автор фото: Антон</p>
+              <div class="fotoalbum__picture-wrapper">
+                <picture>
+                  <source media="(min-width: 1200px)"
+                    srcset="img/catalog/bridge-desktop.jpg 1x, img/catalog/bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/bridge-tablet.jpg 1x, img/catalog/bridge-tablet@2x.jpg 2x">
+                  <img class="fotoalbum__img" src="img/catalog/bridge-mobile.jpg" width="280" height="280"
+                    srcset="img/catalog/bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
+                </picture>
               </div>
-              <div class="fotoalbum__number-wrapper">
-                <button class="fotoalbum__button" type="button">
-                  <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
-                  </svg>
-                  <span class="visually-hidden">Лайк</span>
-                </button>
-                <p class="fotoalbum__number">254</p>
+              <div class="fotoalbum__wrapper">
+                <div class="fotoalbum__text-wrapper">
+                  <h3 class="fotoalbum__title">Мост дьявола</h3>
+                  <p class="fotoalbum__description">Автор фото: Антон</p>
+                </div>
+                <div class="fotoalbum__number-wrapper">
+                  <button class="fotoalbum__button" type="button">
+                    <svg class="fotoalbum__like" aria-hidden="true" focusable="false" width="23" height="21"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="m12.964 3.78-.628 3.045-.627 2.625h9.096v2.205L17.773 18.9h-9.41V8.4l4.6-4.62ZM2.09 10.5v8.4-8.4ZM13.8 0 6.9 6.93c-.418.315-.627.84-.627 1.47v10.5a2.1 2.1 0 0 0 2.09 2.1h9.41c.836 0 1.568-.525 1.881-1.26l3.137-7.455c.104-.21.104-.525.104-.735v-2.1H23a2.1 2.1 0 0 0-2.09-2.1h-6.587l1.045-4.83v-.315c0-.42-.209-.84-.418-1.155L13.8 0ZM4.182 8.4H0V21h4.182V8.4Z" />
+                    </svg>
+                    <span class="visually-hidden">Лайк</span>
+                  </button>
+                  <p class="fotoalbum__number">254</p>
+                </div>
               </div>
             </li>
           </ul>
@@ -150,7 +198,9 @@
             раз!</p>
           <div class="video__player">
             <button class="video__button"></button>
-            <video class="video__container" width="280" poster="/img/catalog/video-mobile.jpg"></video>
+
+            <video class="video__container" width="280" poster="img/catalog/video-mobile.jpg"></video>
+
           </div>
         </section>
       </main>
