Index mobile pixel perfect

--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
         </picture>
       </header>
       <section class="text-block about-sedona">
-        <h2 class="text-block__title">СЕДОНА — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <h2 class="text-block__title about-sedona__title">СЕДОНА — небольшой<br> городок в Аризоне, заслуживающий большего!</h2>
         <p class="text-block__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
       <section class="advantages">
@@ -69,7 +69,7 @@
           <li class="advantages__item advantages__item--blue-theme">
             <div class="advantages__text">
               <h3 class="advantages__title advantages__title--white-theme">Настоящий <br> городок</h3>
-              <p class="advantages__description advantages__description--white-theme"> -№1-</p>
+              <p class="advantages__description advantages__description--white-theme"> — №1 —</p>
               <p class="advantages__description advantages__description--white-theme"> Седона не аттракцион для
                 туристов,<br>
                 там течет своя жизнь </p>
@@ -101,7 +101,7 @@
           <li class="advantages__item advantages__item--blue-theme">
             <div class="advantages__text advantages__text--bridge">
               <h3 class="advantages__title advantages__title--white-theme"> Там есть<br> мост дьявола</h3>
-              <p class="advantages__description advantages__description--white-theme"> -№2-</p>
+              <p class="advantages__description advantages__description--white-theme"> — №2 —</p>
               <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно </p>
             </div>
             <picture>
@@ -119,20 +119,20 @@
           <li class="advantages__item">
             <div class="advantages__first-line">
               <h3 class="advantages__title">Небольшая <br>площадь</h3>
-              <p class="advantages__description">-№3-</p>
+              <p class="advantages__description">— №3 —</p>
               <p class="advantages__description"> Все интересные места находятся очень близко</p>
             </div>
           </li>
           <li class="advantages__item">
             <div class="advantages__second-line">
               <h3 class="advantages__title">Красивая <br> дорога</h3>
-              <p class="advantages__description">-№4-</p>
+              <p class="advantages__description">— №4 —</p>
               <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем <br> не скучно!</p>
             </div>
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Мало<br> туристов</h3>
-            <p class="advantages__description"> -№5-</p>
+            <p class="advantages__description"> — №5 —</p>
             <p class="advantages__description"> Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
