Pixel perfect index tablet

--- a/source/index.html
+++ b/source/index.html
@@ -96,11 +96,11 @@
           </li>
           <li class="advantages__item advantages__item--icon advantages__item--souvenir">
             <h4 class="advantages__title advantages__title--icon">Сувениры</h4>
-            <p class="advantages__description advantages__description--icon">Не только китайского, <br> но и местного производства!</p>
+            <p class="advantages__description advantages__description--icon advantages__description--souvenir">Не только китайского, <br> но и местного производства!</p>
           </li>
           <li class="advantages__item advantages__item--blue-theme">
             <div class="advantages__text advantages__text--bridge">
-              <h3 class="advantages__title advantages__title--white-theme"> Там есть<br> мост дьявола</h3>
+              <h3 class="advantages__title advantages__title--white-theme"> Там есть <br> мост дьявола</h3>
               <p class="advantages__description advantages__description--white-theme"> — №2 —</p>
               <p class="advantages__description advantages__description--white-theme">Да, по нему можно пройти!<br> Если вы осмелитесь, конечно </p>
             </div>
@@ -127,7 +127,7 @@
             <div class="advantages__second-line">
               <h3 class="advantages__title">Красивая <br> дорога</h3>
               <p class="advantages__description">— №4 —</p>
-              <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем <br> не скучно!</p>
+              <p class="advantages__description advantages__description--road">Ехать в Седону из Лас-Вегаса совсем <br> не скучно!</p>
             </div>
           </li>
           <li class="advantages__item">
